app/styles/modal/_modal-window.scss
.full-modal {
	width: 400px;
	min-height: 100px;
	background-color: $white-background;
	border-radius: 10px;
	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 1px 6px rgba(0,0,0,0.23);
	outline: none;
	padding-top: 1px;
	padding-bottom: 15px;
	
	h2 {
		margin: 25px 10%;
		font: 16px $font-bold;
		color: $sidebar-black-header;
	}
	
	textarea {
		width: 80%;
		min-height: 110px;
		margin-left: 10%;
		font: 14px $font-normal;
		color: rgba($sidebar-black-header, .6);
		resize: none;
		//border: 1px solid rgba($sidebar-black-header, .1);
		//border-radius: 5px;
		border: none;
		cursor: text;
		outline: none;
		padding: 10px;
		box-sizing: border-box;
		background-color: #f7f7f8;
	}
	
	input {
		width: 80%;
		margin-left: 10%;
		font: 14px $font-normal;
		color: rgba($sidebar-black-header, .6);
		resize: none;
		//border: 1px solid rgba($sidebar-black-header, .1);
		//border-radius: 5px;
		border: none;
		cursor: text;
		outline: none;
		padding: 10px;
		box-sizing: border-box;
		background-color: #f7f7f8;
	}
	
	p.error {
		height: 0px;
		text-align: center;
		padding: 0 30px;
		color: $orange;
		font: 12px $font-normal;
		transform: scale3d(0,0,0);
		transition: .4s cubic-bezier(.41,-0.52,.62,1.63);
		
		&.active {
			height: 50px;
			padding-top: 35px;
			transform: scale3d(1,1,1);
			transition: .4s cubic-bezier(.41,-0.52,.62,1.63);
		}
	}
	
	p.delete {
		width: 80%;
		margin: 0 auto;
		font: 14px $font-normal;
		color: rgba($sidebar-black-header, .6);
		line-height: 1.4;
	}
	
	.buttons {
		position: relative;
		width: 200px;
		margin-left: 45%;
		margin-top: 15px;
		height: 50px;
		display: inline-block;
		
		button {
			padding: 0;
			outline: none;
		}
		
		button.cancel {
			width: 99px;
			height: 50px;
			font: 14px $font-bold;
			color: rgba($sidebar-black-header, .4);
			border: none;
			margin-left: -4px;
			position: relative;
			background-color: transparent;
			
			&:after {
				content: "";
				position: absolute;
				width: 2px;
				height: 15px;
				right: 0;
				background-color: rgba($sidebar-black-header, .2);
			}
		}
		
		button.submit {
			width: 100px;
			height: 50px;
			font: 14px $font-bold;
			color: $sidebar-black-header;
			border: none;
			margin-left: -4px;
			background-color: transparent;
			
		}
	}
}

